--- a/.github/workflows/NazwaWorkflow.yml
+++ b/.github/workflows/NazwaWorkflow.yml
@@ -1,38 +1,36 @@
-name: Data Converter Build Workflow
+name: Build Data Converter
 
 on:
   push:
     branches: [ "main" ]
-  schedule:
-    - cron: '0 0 * * 0'  # Niedziela o północy
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: macos-latest
-
+    
     steps:
-    - uses: actions/checkout@v4  
-
+    - uses: actions/checkout@v4
+    
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller PyQt5 pyyaml xmltodict
-
+        
     - name: Build
       run: |
-        pyinstaller --onefile converter.py
-        pyinstaller --onefile --windowed converter_ui.py
-
+        pyinstaller --clean --onefile converter.py
+        pyinstaller --clean --onefile --windowed converter_ui.py
+        
     - name: Upload artifacts
-      uses: actions/upload-artifact@v4 
+      uses: actions/upload-artifact@v4
       with:
-        name: macos-build
+        name: macos-app
         path: |
           dist/converter
           dist/converter_ui
